# singer-metrics

./: Cargo.toml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CI.yml  build.yml  test.yml
src/: cli.rs  lib.rs  line_protocol.rs  main.rs  metric.rs  protocol_trait.rs
